external-crates/move/crates/move-compiler/tests/move_check/typing/borrow_divergent.move
module 0x42::m {
    fun main1() {
        loop {
           &break;
        }
    }

    fun main2() {
        &{ return };
    }

    fun main3(cond: bool) {
        &(if (cond) return else return);
    }
}
